--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: Jordan Trujillo
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Feel free to check out my porfolio and github.
+  Feel free to check out my portfolio and github.
   I plan on adding all sorts of posts in the future for things that I am working on. 
-  
+ 
   This site was created using jekyll and github pages. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://trujordan.com" # the base hostname & protocol for your site, e.g. http://example.com
