--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://trujordan.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  jordantrujillo
-linkedin_username: jordan-trujillo-3984b257
+linkedin_username: jordan-trujillo
 # Build settings
 theme: minima
 minima:
