Add jekyll-paginate and jekyll-algolia gems

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Home"
     url: /
-  - title: "About"
+  - title: "AboutMe"
     url: /about/
   - title: "CV"
     url: /work/
