--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
-  powered_by             : # true (default), false
+  powered_by             : false # true (default), false
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
@@ -106,8 +106,8 @@ analytics:
 author:
   name             : "Jordan Trujillo"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Jordan Trujillo's personal website"
-  location         : "Southern California, USA"
+  bio              : "DevOps Engineer, Photographer, and Musician."
+  location         : # "N/A"
   email            :
   links:
     # - label: "Email"
