--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Jordan Trujillo"
 title_separator          : "-"
-subtitle                 : "Senior DevOps Engineer & Tech Enthusiast" # site tagline that appears below site title in masthead
+subtitle                 : "Senior DevOps Engineer" # site tagline that appears below site title in masthead
 name                     : "Jordan Trujillo"
 description              : "Senior DevOps Engineer, Photography hobbyist, Musician, and all around Tech Enthusiast. Explore my portfolio, blog posts about automation, and technology insights."
 url                      : "https://trujordan.com" # the base hostname & protocol for your site
